--- a/packages/ramp-core/src/lang/lang.csv
+++ b/packages/ramp-core/src/lang/lang.csv
@@ -1,1 +1,6 @@
 key,enValue,enValid,frValue,frValid
+lang-code,en,1,fr,1
+lang-dir,ltr,1,ltr,1
+lang-en,English,1,French,1
+lang-fr,anglais,1,français,1
+lang-native,English,1,Français,
