--- a/packages/ramp-core/src/fixtures/geosearch/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/geosearch/lang/lang.csv
@@ -1,5 +1,6 @@
 key,enValue,enValid,frValue,frValid
 noResults,No results to show for ,1,Aucun résultat pour montrer pour ,0
+searchText,Search text,1,Texte à rechercher,0
 visible,Visible on map,1,Visible sur la carte,0
 filters.province,Province,1,Province,0
 filters.type,Type,1,Type,0
