chore: simplify loading locale messages in panel screen components

--- a/packages/ramp-core/src/fixtures/gazebo/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/gazebo/lang/lang.csv
@@ -1,2 +1,3 @@
 key,enValue,enValid,frValue,frValid
 hello,"I'm a simple panel. but from a locale file",1,"Bonjour. Je suis un panel.",0
+hello2,"I'm a simple panel.",1,"Bonjour. Je suis un panel.",0
