chore: merge fixture i18n messages into the global locales

--- a/packages/ramp-core/src/lang/lang.csv
+++ b/packages/ramp-core/src/lang/lang.csv
@@ -3,4 +3,4 @@ lang-code,en,1,fr,1
 lang-dir,ltr,1,ltr,1
 lang-en,English,1,French,1
 lang-fr,anglais,1,français,1
-lang-native,English,1,Français,
+lang-native,English,1,Français,1
