--- a/packages/ramp-core/src/lang/lang.csv
+++ b/packages/ramp-core/src/lang/lang.csv
@@ -5,3 +5,7 @@ lang-en,English,1,French,1
 lang-fr,anglais,1,français,1
 lang-native,English,1,Français,1
 map.toggleScaleUnits,Toggle between imperial and metric map scale,1,Basculer entre les échelles métriques et impériales pour la carte,1
+map.coordinates.east,E,1,E,1
+map.coordinates.west,W,1,O,1
+map.coordinates.north,N,1,N,1
+map.coordinates.south,S,1,S,1
