lang file updates

--- a/packages/ramp-core/src/lang/lang.csv
+++ b/packages/ramp-core/src/lang/lang.csv
@@ -13,3 +13,4 @@ panels.controls.close,Close,1,Fermer,1
 panels.controls.pin,Pin,1,Épingler,0
 panels.controls.unpin,Unpin,1,Détacher,0
 panels.controls.back,Back,1,Retourner,0
+panels.controls.optionsMenu,More,1,Plus,0
