--- a/packages/ramp-core/src/fixtures/grid/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/grid/lang/lang.csv
@@ -7,3 +7,4 @@ grid.filters.column.label.text,text,0,texte,0
 grid.filters.clear,Clear filters,1,Effacer les filtres,0
 grid.filters.label.info,{range} of {total} entries shown,1,Affichage de l'élément {range} sur {total} éléments,0
 grid.filters.label.filtered,(filtered from {max} total entries),1,(filtrés de {max} éléments au total),0
+grid.button.title,Grid,1,Grille,0
