--- a/packages/ramp-core/src/fixtures/export-v1/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/export-v1/lang/lang.csv
@@ -1,3 +1,4 @@
 key,enValue,enValid,frValue,frValid
+export-v1.appbarButton,Export,1,[fr] Export,0
 export-v1.download,Download image,1,[fr] Download image,1
 export-v1.refresh,Refresh,1,[fr] Refresh,1
