--- a/packages/ramp-core/src/lang/lang.csv
+++ b/packages/ramp-core/src/lang/lang.csv
@@ -9,6 +9,11 @@ map.coordinates.east,E,1,E,1
 map.coordinates.west,W,1,O,1
 map.coordinates.north,N,1,N,1
 map.coordinates.south,S,1,S,1
+map.changeLanguage,Change Language,1,Changer la Langue,0
+map.language.short,EN-CA,1,FR-CA,0
+map.language.en,English (current),1,English,1
+map.language.fr,Français,1,Français (actuel),0
+map.export,export map,1,exporter la carte,0
 panels.controls.close,Close,1,Fermer,1
 panels.controls.pin,Pin,1,Épingler,0
 panels.controls.unpin,Unpin,1,Détacher,0
