add reload to legend

--- a/packages/ramp-core/src/fixtures/legend/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/legend/lang/lang.csv
@@ -20,3 +20,4 @@ legend.entry.controls.settings,Settings,1,Paramètres,1
 legend.entry.controls.datatable,Datatable,1,Tableau de données,1
 legend.entry.controls.symbology,Legend,1,Légende,1
 legend.entry.controls.remove,Remove,1,Retirer,1
+legend.entry.controls.reload,Reload,1,Recharger,1
