--- a/packages/ramp-core/src/fixtures/grid/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/grid/lang/lang.csv
@@ -1,11 +1,19 @@
 key,enValue,enValid,frValue,frValid
 grid.title,Features,1,Éléments,1
 grid.layer.loading,The layer is loading...,1,La couche est le chargement...,0
-grid.label.columns,Columns,1,Colonnes,0
-grid.label.filters,Filters,1,Filtres,0
+grid.label.columns,Hide columns,1,Masquer les colonnes,0
+grid.label.filters.show,Show filters,1,Afficher les filtres,1
+grid.label.filters.hide,Hide filters,1,Cacher les filtres,0
+grid.header.sort.0,Sort ascending,1,Trier par ordre ascendant,0
+grid.header.sort.1,Sort descending,1,Le tri descendant,0
+grid.header.sort.2,Sort default,1,Trier par défaut,0
+grid.header.reorder.left,Move left,1,Aller de gauche,0
+grid.header.reorder.right,Move right,1,Aller droit,0
 grid.filters.label.global,Search table,1,Tableau de recherche,0
 grid.filters.column.label.text,text,0,texte,0
 grid.filters.clear,Clear filters,1,Effacer les filtres,0
 grid.filters.label.info,{range} of {total} entries shown,1,Affichage de l'élément {range} sur {total} éléments,0
 grid.filters.label.filtered,(filtered from {max} total entries),1,(filtrés de {max} éléments au total),0
+grid.cells.zoom,Zoom to feature,1,Zoom à l'élément,1
+grid.cells.details,Details,1,Détails,1
 grid.button.title,Grid,1,Grille,0
