--- a/packages/ramp-core/src/fixtures/legend/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/legend/lang/lang.csv
@@ -13,6 +13,7 @@ legend.visibility.show,Show layer,1,Afficher la couche,0
 legend.visibility.hide,Hide layer,1,Masquer la couche,0
 legend.symbology.expand,Expand legend,1,Développer la légende,0
 legend.symbology.hide,Hide legend,1,Cacher la légende,0
+legend.symbology.loading,Loading...,1,Chargement...,0
 legend.entry.data,Show more data,1,Démontrer plus de données,0
 legend.entry.options,More options,1,Plus d'options,1
 legend.entry.controls.metadata,Metadata,1,Métadonnées,1
