--- a/packages/ramp-core/src/fixtures/overviewmap/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/overviewmap/lang/lang.csv
@@ -1,3 +1,3 @@
 key,enValue,enValid,frValue,frValid
-overviewmap.expand,Expand Overview,1,Élargir l’aperçu,0
-overviewmap.minimize,Minimize Overview,1,Minimiser Aperçu,0
+overviewmap.expand,Expand Overview,1,Développer l’aperçu,1
+overviewmap.minimize,Minimize Overview,1,Réduire l’aperçu,1
