--- a/packages/ramp-core/src/fixtures/wizard/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/wizard/lang/lang.csv
@@ -2,35 +2,35 @@ key,enValue,enValid,frValue,frValid
 wizard.title,Import Layer,1,Importer un fichier,1
 wizard.upload.title,Upload data,1,Charger des données,1
 wizard.upload.or,or,1,ou,1
-wizard.upload.file.label,Upload a file,1,Télécharger un fichier,0
-wizard.upload.file.help,Drop or select a file to upload,1,Baisse ou sélectionnez un fichier à télécharger,0
-wizard.upload.file.error.failed,File upload failed,1,Téléchargement d’un fichier n’a pas,0
-wizard.upload.url.label,URL to file or service,1,URL de déposer ou service,0
-wizard.upload.url.error.required,URL is required,1,URL est requis,0
-wizard.upload.url.error.url,Please enter a valid URL,1,Veuillez entrer une adresse URL valide,0
-wizard.format.title,Select format,1,Sélectionnez le format,0
+wizard.upload.file.label,Upload a file,1,Télécharger un fichier,1
+wizard.upload.file.help,Drop or select a file to upload,1,Déposer ou sélectionner un fichier à télécharger,1
+wizard.upload.file.error.failed,File upload failed,1,Le téléchargement du fichier a échoué,1
+wizard.upload.url.label,URL to file or service,1,URL vers fichier ou service,1
+wizard.upload.url.error.required,URL is required,1,L’URL est requise,1
+wizard.upload.url.error.url,Please enter a valid URL,1,Veuillez saisir une adresse URL valide,1
+wizard.format.title,Select format,1,Choisir un format,1
 wizard.format.type.service,Service type,1,Type de service,1
 wizard.format.type.file,File format,1,Format du fichier,1
-wizard.format.type.error.required,Service or file type is required,1,Le service ou le type de fichier est requis,0
-wizard.format.type.error.invalid,Invalid file or service type,1,Dossier non valide ou type de service,0
+wizard.format.type.error.required,Service or file type is required,1,Le service ou le type de fichier est requis,1
+wizard.format.type.error.invalid,Invalid file or service type,1,Type de fichier ou de service non valide,1
 wizard.fileType.csv,CSV,1,CSV,1
 wizard.fileType.shapefile,zipped Shapefile,1,Shapefile zippé,1
 wizard.fileType.geojson,GeoJSON,1,GeoJSON,1
 wizard.layerType.esriFeature,ESRI Feature Layer,1,Couche d'éléments d'ESRI,1
-wizard.layerType.esriMapImage,ESRI Map Image Layer,1,ESRI couche de carte image,0
+wizard.layerType.esriMapImage,ESRI Map Image Layer,1,Couche d’image de la carte ESRI,1
 wizard.layerType.esriImagery,ESRI Image Layer,1,Couche d'images d'ESRI,1
 wizard.layerType.esriTile,ESRI Tile Layer,1,Couche de tuiles d'ESRI,1
 wizard.layerType.ogcWms,OGC Web Map Service,1,Couche WMS de l'OGC,1
 wizard.layerType.ogcWfs,OGC Web Feature Service,1,Service d'entités Web OGC,1
 wizard.configure.title,Configure layer,1,Configurer la couche,1
-wizard.configure.name.error.required,Name is required,1,Nom est requis,0
+wizard.configure.name.error.required,Name is required,1,Le champ Nom est obligatoire,1
 wizard.configure.name.label,Layer Name,1,Nom de la couche,1
 wizard.configure.nameField.label,Primary Field,1,Champ clé,1
 wizard.configure.tooltipField.label,Tooltip Field,1,Champ infobulle,1
 wizard.configure.latField.label,Latitude Field,1,Champ latitude,1
 wizard.configure.longField.label,Longitude Field,1,Champ longitude,1
-wizard.configure.layerEntries.error.required,LayerEntries is required,1,LayerEntries sont obligatoires,0
+wizard.configure.layerEntries.error.required,LayerEntries is required,1,Le champ LayerEntries est obligatoire,1
 wizard.configure.layerEntries.label,Layers,1,Couches,1
-wizard.configure.layerEntries.help,Hold Ctrl to select multiple layers,1,Maintenez la touche Ctrl enfoncée pour sélectionner de multiples couches,0
+wizard.configure.layerEntries.help,Hold Ctrl to select multiple layers,1,Maintenez la touche CTRL enfoncée pour sélectionner plusieurs couches,1
 wizard.step.cancel,Cancel,1,Annuler,1
 wizard.step.continue,Continue,1,Continuer,1
