--- a/packages/ramp-core/src/lang/lang.csv
+++ b/packages/ramp-core/src/lang/lang.csv
@@ -4,36 +4,36 @@ lang-dir,ltr,1,ltr,1
 lang-en,English,1,French,1
 lang-fr,anglais,1,français,1
 lang-native,English,1,Français,1
-keyboardInstructions.title,Keyboard Instructions,1,Les instructions du clavier,0
-keyboardInstructions.open,Open keyboard instructions,1,Ouvrir les instructions du clavier,0
-keyboardInstructions.app,"Use 'Tab' to navigate between sections of the application.",1,"Utiliser « Tab » pour naviguer entre les différentes sections de l’application",0
-keyboardInstructions.lists,"Use the arrow keys to move between items in lists. With a list item selected you can press 'Space' or 'Enter' to click the item. You can also navigate within the list item using 'Tab'.",1,"Utilisez les touches fléchées pour déplacer entre les articles dans les listes. Avec un élément de la liste sélectionnée, vous pouvez appuyer sur « espace » ou « entrer ». Cliquer sur le poste. Vous pouvez aussi naviguer dans l’élément de la liste en utilisant « Tab ».",0
-keyboardInstructions.map,"When the map is selected, use the arrow keys to move around and 'Enter' to select a point.",1,"Lorsque la carte est sélectionnée, utilisez les touches fléchées pour déplacer et la touche « entrer » pour sélectionner un point.",0
-keyboardInstructions.OK,OK,1,OK,0
+keyboardInstructions.title,Keyboard Instructions,1,Instructions clavier,1
+keyboardInstructions.open,Open keyboard instructions,1,Instructions clavier ouvert,1
+keyboardInstructions.app,"Use 'Tab' to navigate between sections of the application.",1,"Utilisez la touche Tab pour vous déplacer entre les sections de l’application.",1
+keyboardInstructions.lists,"Use the arrow keys to move between items in lists. With a list item selected you can press 'Space' or 'Enter' to click the item. You can also navigate within the list item using 'Tab'.",1,"Lorsqu’un élément de la liste est sélectionné, vous pouvez appuyer sur « Espace » ou « Entrée » pour cliquer sur l’élément. Vous pouvez également vous déplacer au sein de l’élément de la liste au moyen de la touche « Tab ».",1
+keyboardInstructions.map,"When the map is selected, use the arrow keys to move around and 'Enter' to select a point.",1,"Lorsque la carte est sélectionnée, utilisez le pavé curseur pour vous déplacer et appuyez sur « Entrée »  pour sélectionner un point.",1
+keyboardInstructions.OK,OK,1,OK,1
 map.toggleScaleUnits,Toggle between imperial and metric map scale,1,Basculer entre les échelles métriques et impériales pour la carte,1
 map.coordinates.east,E,1,E,1
 map.coordinates.west,W,1,O,1
 map.coordinates.north,N,1,N,1
 map.coordinates.south,S,1,S,1
-map.changeLanguage,Change Language,1,Changer la Langue,0
-map.language.short,EN-CA,1,FR-CA,0
+map.changeLanguage,Change Language,1,Changer de langue,1
+map.language.short,EN-CA,1,FR-CA,1
 map.language.en,English (current),1,English,1
-map.language.fr,Français,1,Français (actuel),0
-map.export,export map,1,exporter la carte,0
-notifications.title,Notifications,1,Notifications,0
-notifications.empty,No new notifications.,1,Aucun nouvel avis.,0
-notifications.controls.dismiss,Dismiss,1,Rejeter,0
-notifications.controls.expand,Expand,1,Élargir,0
-notifications.controls.collapse,Collapse,1,Réduire,0
-notifications.controls.clearAll,Clear All,1,Tout effacer,0
+map.language.fr,Français,1,Français (actuel),1
+map.export,export map,1,exporter la carte,1
+notifications.title,Notifications,1,Notifications,1
+notifications.empty,No new notifications.,1,Aucune nouvelle notification.,1
+notifications.controls.dismiss,Dismiss,1,Rejeter,1
+notifications.controls.expand,Expand,1,Développer,1
+notifications.controls.collapse,Collapse,1,Réduire,1
+notifications.controls.clearAll,Clear All,1,Effacer tout,1
 panels.controls.close,Close,1,Fermer,1
-panels.controls.pin,Pin,1,Épingler,0
-panels.controls.unpin,Unpin,1,Détacher,0
-panels.controls.back,Back,1,Retourner,0
-panels.controls.optionsMenu,More,1,Plus,0
-panels.controls.minimize,Minimize,1,Réduire au minimum,0
-panels.controls.expand,Expand,1,Élargir,0
-panels.controls.collapse,Collapse,1,Réduire,0
+panels.controls.pin,Pin,1,Épingler,1
+panels.controls.unpin,Unpin,1,Désépingler,1
+panels.controls.back,Back,1,Retour,1
+panels.controls.optionsMenu,More,1,Plus,1
+panels.controls.minimize,Minimize,1,Réduire,1
+panels.controls.expand,Expand,1,Développer,1
+panels.controls.collapse,Collapse,1,Réduire,1
 panels.alert.open,{name} panel opened,1,Panneau de {name} ouvert,0
 panels.alert.close,{name} panel closed,1,Panneau de {name} fermé,0
 panels.alert.minimize,{name} panel minimized,1,Panneau de {name} minimisé,0
