implement layer reordering fixture

--- a/packages/ramp-core/src/fixtures/legend/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/legend/lang/lang.csv
@@ -1,6 +1,7 @@
 key,enValue,enValid,frValue,frValid
 legend.title,Legend,1,Légende,1
 legend.header.addlayer,Add Layer,1,Ajouter une couche,1
+legend.header.reorderlayers,Reorder Layers,1,Reorder Layers,0
 legend.header.groups,Toggle Groups,1,Basculer les Groupes,1
 legend.header.groups.expand,Expand All,1,Élargir les groupes,1
 legend.header.groups.collapse,Collapse All,1,Réduire les groupes,1
