--- a/packages/ramp-core/src/fixtures/details/lang/lang.csv
+++ b/packages/ramp-core/src/fixtures/details/lang/lang.csv
@@ -1,6 +1,15 @@
 key,enValue,enValid,frValue,frValid
-details.title,Details,1,Détails,1
+details.layers.title,Identified Layers,1,Couches Identifiés,0
 details.layers.found,Found {numResults} results in {numLayers} layers,1,{numResults} résultats trouvés dans {numLayers} couches,1
 details.layers.loading,The layer is loading...,1,La couche est en cours de chargement...,1
-details.results.empty,No results found for the selected layer.,1,Aucun résultat trouvé pour la couche sélectionnée.,1
+details.layers.results.empty,No results found for the selected layer.,1,Aucun résultat trouvé pour la couche sélectionnée.,1
+details.result.default.name,Identify Item {0},1,Déterminer le point {0},0
+details.items.title,Details,1,Détails,1
+details.item.see.list,See List,1,Voir la liste,0
 details.item.zoom,Zoom to feature,1,Zoom à l'élément,1
+details.item.previous.item,Previous item,1,Point précédent,0
+details.item.next.item,Next item,1,Prochain article,0
+details.item.count,{0} of {1},1,{0} de {1},0
+details.item.alert.zoom,Zoomed into feature,1,Zoomed into feature,0
+details.item.alert.show.item,Showing result {itemName},1,Showing result {itemName},0
+details.item.alert.show.list,Showing all results for {layerName},1,Showing all results for {layerName},0
