--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -18,8 +18,9 @@ map.coordinates.north,N,1,N,1
 map.coordinates.south,S,1,S,1
 map.changeLanguage,Change Language,1,Changer de langue,1
 map.language.short,EN-CA,1,FR-CA,1
-map.language.en,English (current),1,English,1
-map.language.fr,Français,1,Français (actuel),1
+map.language.en,English,1,English,1
+map.language.fr,Français,1,Français,1
+map.language.curr,current,1,actuel,1
 map.export,export map,1,exporter la carte,1
 notifications.title,Notifications,1,Notifications,1
 notifications.empty,No new notifications.,1,Aucune nouvelle notification.,1
