--- a/src/fixtures/settings/lang/lang.csv
+++ b/src/fixtures/settings/lang/lang.csv
@@ -10,3 +10,4 @@ settings.label.identify,Toggle identify,1,Basculer la requête,0
 settings.label.interval,Refresh interval,1,Intervalle d'actualisation,1
 settings.label.refreshHint,Refresh interval in minutes,1,Intervalle d'actualisation en minutes,1
 settings.label.refreshOff, Leave blank or 0 to turn off automatic refresh,1,Laisser le champ vide ou y inscrire 0 pour désactiver l'actualisation automatique,1
+settings.label.no.layer,The layer has been removed,1,The layer has been removed,0
