--- a/src/fixtures/wizard/lang/lang.csv
+++ b/src/fixtures/wizard/lang/lang.csv
@@ -32,8 +32,8 @@ wizard.configure.nameField.label,Primary Field,1,Champ clé,1
 wizard.configure.tooltipField.label,Tooltip Field,1,Champ infobulle,1
 wizard.configure.latField.label,Latitude Field,1,Champ latitude,1
 wizard.configure.longField.label,Longitude Field,1,Champ longitude,1
-wizard.configure.layerEntries.error.required,LayerEntries is required,1,Le champ LayerEntries est obligatoire,1
-wizard.configure.layerEntries.label,Layers,1,Couches,1
-wizard.configure.layerEntries.help,Hold Ctrl to select multiple layers,1,Maintenez la touche CTRL enfoncée pour sélectionner plusieurs couches,1
+wizard.configure.sublayers.error.required,Sublayers are required,1,Le sous-couche est obligatoire,0
+wizard.configure.sublayers.label,Layers,1,Couches,1
+wizard.configure.sublayers.help,Hold Ctrl to select multiple layers,1,Maintenez la touche CTRL enfoncée pour sélectionner plusieurs couches,1
 wizard.step.cancel,Cancel,1,Annuler,1
 wizard.step.continue,Continue,1,Continuer,1
