--- a/src/fixtures/wizard/lang/lang.csv
+++ b/src/fixtures/wizard/lang/lang.csv
@@ -35,5 +35,9 @@ wizard.configure.longField.label,Longitude Field,1,Champ longitude,1
 wizard.configure.sublayers.error.required,Sublayers are required,1,Le sous-couche est obligatoire,0
 wizard.configure.sublayers.label,Layers,1,Couches,1
 wizard.configure.sublayers.help,Hold Ctrl to select multiple layers,1,Maintenez la touche CTRL enfoncée pour sélectionner plusieurs couches,1
+wizard.configure.colour.label,Colour,1,Couleur,0
+wizard.configure.colour.hue,Hue,1,Hue,0
+wizard.configure.colour.copy,Copy colour,1,Copier la couleur,0
+wizard.configure.colour.hex,Hex,1,Hex,0
 wizard.step.cancel,Cancel,1,Annuler,1
 wizard.step.continue,Continue,1,Continuer,1
