--- a/src/fixtures/legend/lang/lang.csv
+++ b/src/fixtures/legend/lang/lang.csv
@@ -10,8 +10,12 @@ legend.header.visible.show,Show All,1,Montrer tout,1
 legend.header.visible.hide,Hide All,1,Cacher tout,1
 legend.group.expand,Expand Group,1,Développer un groupe,1
 legend.group.collapse,Collapse Group,1,Réduire un groupe,1
-legend.visibility.show,Show layer,1,Afficher la couche,1
-legend.visibility.hide,Hide layer,1,Masquer la couche,1
+legend.visibility.showLayer,Show layer,1,Afficher la couche,1
+legend.visibility.hideLayer,Hide layer,1,Masquer la couche,1
+legend.visibility.showSymbol,Show symbol,1,Afficher le symbole,0
+legend.visibility.hideSymbol,Hide symbol,1,Masquer le symbole,0
+legend.visibility.showGroup,Show group,1,Afficher le groupe,0
+legend.visibility.hideGroup,Hide group,1,Masquer le groupe,0
 legend.symbology.expand,Expand legend,1,Développer la légende,1
 legend.symbology.hide,Hide legend,1,Masquer la légende,1
 legend.symbology.loading,Loading...,1,Chargement en cours...,1
