--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -39,6 +39,8 @@ panels.controls.optionsMenu,More,1,Plus,1
 panels.controls.minimize,Minimize,1,Réduire,1
 panels.controls.expand,Expand,1,Développer,1
 panels.controls.collapse,Collapse,1,Réduire,1
+panels.controls.moveRight,Move Right,1,Aller à droite,1
+panels.controls.moveLeft,Move Left,1,Aller à gauche,1
 panels.alert.open,{name} panel opened,1,Panneau de {name} ouvert,0
 panels.alert.close,{name} panel closed,1,Panneau de {name} fermé,0
 panels.alert.minimize,{name} panel minimized,1,Panneau de {name} minimisé,0
