--- a/src/fixtures/details/lang/lang.csv
+++ b/src/fixtures/details/lang/lang.csv
@@ -1,18 +1,18 @@
 key,enValue,enValid,frValue,frValid
-details.layers.title,Identified Layers,1,Couches Identifiés,0
+details.layers.title,Identified Layers,1,Couches désignées,1
 details.layers.found,Found {numResults} results in {numLayers} layers,1,{numResults} résultats trouvés dans {numLayers} couches,1
 details.layers.loading,The layer is loading...,1,La couche est en cours de chargement...,1
 details.layers.results.empty,No results found for the selected layer.,1,Aucun résultat trouvé pour la couche sélectionnée.,1
-details.result.default.name,Identify Item {0},1,Déterminer le point {0},0
+details.result.default.name,Identify Item {0},1,Désigner l'élément {0},1
 details.items.title,Details,1,Détails,1
-details.item.see.list,See List,1,Voir la liste,0
+details.item.see.list,See List,1,Voir la liste,1
 details.item.zoom,Zoom to feature,1,Zoom à l'élément,1
-details.item.previous.item,Previous item,1,Point précédent,0
-details.item.next.item,Next item,1,Prochain article,0
-details.item.count,{0} of {1},1,{0} de {1},0
-details.item.loading,Loading results...,1,Chargement des résultats...,0
-details.item.no.data,No data to show because the layer has been removed,1,Aucune donnée à afficher car le calque a été supprimé,0
-details.item.alert.zoom,Zoomed into feature,1,Zoomé sur l'élément,0
-details.item.alert.show.item,Showing result {itemName},1,Affichage des résultats {itemName},0
-details.item.alert.show.list,Showing all results for {layerName},1,Afficher tous les résultats pour {layerName},0
-details.togglehilight.title,Toggle Highlight,1,Toggle Souligner,0
+details.item.previous.item,Previous item,1,Élément précédent,1
+details.item.next.item,Next item,1,Élément suivant,1
+details.item.count,{0} of {1},1,{0} de {1},1
+details.item.loading,Loading results...,1,Chargement des résultats...,1
+details.item.no.data,No data to show because the layer has been removed,1,Aucune donnée à afficher, car la couche a été supprimée,1
+details.item.alert.zoom,Zoomed into feature,1,Zoom sur la caractéristique,1
+details.item.alert.show.item,Showing result {itemName},1,Affichage du résultat {itemName},1
+details.item.alert.show.list,Showing all results for {layerName},1,Affichage de tous les résultats pour {layerName},1
+details.togglehilight.title,Toggle Highlight,1,Basculer vers l'élément principal,1
