--- a/src/fixtures/panguard/lang/lang.csv
+++ b/src/fixtures/panguard/lang/lang.csv
@@ -1,2 +1,2 @@
 key,enValue,enValid,frValue,frValid
-panguard.instructions,Use two fingers to pan the map,1,Utiliser deux doigts pour déplacer la carte,0
+panguard.instructions,Use two fingers to pan the map,1,Utilisez deux doigts pour faire un panoramique de la carte,1
