--- a/src/fixtures/wizard/lang/lang.csv
+++ b/src/fixtures/wizard/lang/lang.csv
@@ -13,9 +13,9 @@ wizard.format.type.service,Service type,1,Type de service,1
 wizard.format.type.file,File format,1,Format du fichier,1
 wizard.format.type.error.required,Service or file type is required,1,Le service ou le type de fichier est requis,1
 wizard.format.type.error.invalid,Invalid file or service type,1,Type de fichier ou de service non valide,1
-wizard.format.type.error.failure,Failed to load data from file/service,1,Failed to load data from file/service,0
-wizard.format.info.cors,Service needs to be CORS enabled,1,Service needs to be CORS enabled,0
-wizard.format.warn.cors,Service may not support CORS,1,Service may not support CORS,0
+wizard.format.type.error.failure,Failed to load data from file/service,1,Échec du chargement des données à partir du fichier/service,1
+wizard.format.info.cors,Service needs to be CORS enabled,1,Le service doit être compatible CORS.,1
+wizard.format.warn.cors,Service may not support CORS,1,Le service ne pend peut-être pas en charge CORS.,1
 wizard.fileType.csv,CSV,1,CSV,1
 wizard.fileType.shapefile,zipped Shapefile,1,Shapefile zippé,1
 wizard.fileType.geojson,GeoJSON,1,GeoJSON,1
@@ -32,12 +32,12 @@ wizard.configure.nameField.label,Primary Field,1,Champ clé,1
 wizard.configure.tooltipField.label,Tooltip Field,1,Champ infobulle,1
 wizard.configure.latField.label,Latitude Field,1,Champ latitude,1
 wizard.configure.longField.label,Longitude Field,1,Champ longitude,1
-wizard.configure.sublayers.error.required,Sublayers are required,1,Le sous-couche est obligatoire,0
+wizard.configure.sublayers.error.required,Sublayers are required,1,Des sous-couches sont requises,1
 wizard.configure.sublayers.label,Layers,1,Couches,1
 wizard.configure.sublayers.help,Hold Ctrl to select multiple layers,1,Maintenez la touche CTRL enfoncée pour sélectionner plusieurs couches,1
-wizard.configure.colour.label,Colour,1,Couleur,0
-wizard.configure.colour.hue,Hue,1,Hue,0
-wizard.configure.colour.copy,Copy colour,1,Copier la couleur,0
-wizard.configure.colour.hex,Hex,1,Hex,0
+wizard.configure.colour.label,Colour,1,Couleur,1
+wizard.configure.colour.hue,Hue,1,Teinte,1
+wizard.configure.colour.copy,Copy colour,1,Copier la couleur,1
+wizard.configure.colour.hex,Hex,1,Hex,1
 wizard.step.cancel,Cancel,1,Annuler,1
 wizard.step.continue,Continue,1,Continuer,1
