--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -4,8 +4,8 @@ lang-dir,ltr,1,ltr,1
 lang-en,English,1,French,1
 lang-fr,anglais,1,français,1
 lang-native,English,1,Français,1
-ramp.about.open,Open About RAMP,1,Ouvrir À propos de RAMP,0
-ramp.about,About RAMP,1,Au sujet de la PCAR,0
+ramp.about.open,Open About RAMP,1,Ouvrir À propos de PCAR,1
+ramp.about,About RAMP,1,À propos de PCAR,1
 keyboardInstructions.title,Keyboard Instructions,1,Instructions clavier,1
 keyboardInstructions.open,Open keyboard instructions,1,Instructions clavier ouvert,1
 keyboardInstructions.app,"Use 'Tab' to navigate between sections of the application.",1,"Utilisez la touche Tab pour vous déplacer entre les sections de l’application.",1
@@ -23,14 +23,14 @@ map.language.en,English,1,English,1
 map.language.fr,Français,1,Français,1
 map.language.curr,current,1,actuel,1
 map.export,export map,1,exporter la carte,1
-notifications.open,Open Notifications Panel,1,Ouvrir le panneau des notifications,0
+notifications.open,Open Notifications Panel,1,Ouvrir la fenêtre des notifications,1
 notifications.title,Notifications,1,Notifications,1
 notifications.empty,No new notifications.,1,Aucune nouvelle notification.,1
 notifications.controls.dismiss,Dismiss,1,Rejeter,1
 notifications.controls.expand,Expand,1,Développer,1
 notifications.controls.collapse,Collapse,1,Réduire,1
 notifications.controls.clearAll,Clear All,1,Effacer tout,1
-panels.access,Access the panel,1,Accéder au panneau,0
+panels.access,Access the panel,1,Accéder à la fenêtre,1
 panels.controls.close,Close,1,Fermer,1
 panels.controls.pin,Pin,1,Épingler,1
 panels.controls.unpin,Unpin,1,Désépingler,1
@@ -41,9 +41,9 @@ panels.controls.expand,Expand,1,Développer,1
 panels.controls.collapse,Collapse,1,Réduire,1
 panels.controls.moveRight,Move Right,1,Aller à droite,1
 panels.controls.moveLeft,Move Left,1,Aller à gauche,1
-panels.alert.open,{name} panel opened,1,Panneau de {name} ouvert,0
-panels.alert.close,{name} panel closed,1,Panneau de {name} fermé,0
-panels.alert.minimize,{name} panel minimized,1,Panneau de {name} minimisé,0
+panels.alert.open,{name} panel opened,1,Fenêtre {name} ouverte,1
+panels.alert.close,{name} panel closed,1,Fenêtre {name} fermée,1
+panels.alert.minimize,{name} panel minimized,1,Fenêtre {name} réduite,1
 layer.error,{id} failed to load,1,{id} n'a pas pu être chargée,0
-layer.longload,{id} is taking longer than expected to load,1,{id} prend plus longtemps que prévu à charger,0
+layer.longload,{id} is taking longer than expected to load,1,Le chargement de {id} met plus de temps que prévu,1
 layer.longdraw,{id} is taking longer than expected to draw,1,{id} prend plus longtemps que prévu pour dessiner,0
