--- a/src/fixtures/legend/lang/lang.csv
+++ b/src/fixtures/legend/lang/lang.csv
@@ -21,7 +21,7 @@ legend.symbology.hide,Hide legend,1,Masquer la légende,1
 legend.symbology.loading,Loading...,1,Chargement en cours...,1
 legend.layer.data,Show more data,1,Afficher plus de données,1
 legend.layer.offscale,Layer out of scale,1,Couche hors de portée,1
-legend.layer.zoomToVisible,Zoom to visible scale,1,Zoomer à l'échelle visible,0
+legend.layer.zoomToVisible,Zoom to visible scale,1,Zoom sur l'échelle visible,1
 legend.layer.options,More options,1,Plus d'options,1
 legend.layer.controls.metadata,Metadata,1,Métadonnées,1
 legend.layer.controls.settings,Settings,1,Paramètres,1
