--- a/src/fixtures/details/lang/lang.csv
+++ b/src/fixtures/details/lang/lang.csv
@@ -8,9 +8,9 @@ details.result.default.name,Identify Item {0},1,Désigner l'élément {0},1
 details.items.title,Details,1,Détails,1
 details.item.see.list,See List,1,Voir la liste,1
 details.item.zoom,Zoom to feature,1,Zoom à l'élément,1
-details.item.zoom.zooming,Zooming...,1,Zoom...,0
-details.item.zoom.error,Zoom failed,1,Échec du zoom,0
-details.item.zoom.zoomed,Zoomed,1,Zoomé,0
+details.item.zoom.zooming,Zooming...,1,Zoom en cours...,1
+details.item.zoom.error,Zoom failed,1,Échec du zoom,1
+details.item.zoom.zoomed,Zoomed,1,Zoom terminé,1
 details.item.previous.item,Previous item,1,Élément précédent,1
 details.item.next.item,Next item,1,Élément suivant,1
 details.item.count,{0} of {1},1,{0} de {1},1
@@ -19,7 +19,7 @@ details.item.no.data,No data to show because the layer has been removed,1,Aucune
 details.item.alert.zoom,Zoomed into feature,1,Zoom sur la caractéristique,1
 details.item.alert.show.item,Showing result {itemName},1,Affichage du résultat {itemName},1
 details.item.alert.show.list,Showing all results for {layerName},1,Affichage de tous les résultats pour {layerName},1
-details.item.alert.defaultAltText,Image associated with {alias} field,1,Image associée au champ {alias},0
+details.item.alert.defaultAltText,Image associated with {alias} field,1,Image associée au champ {alias},1
 details.togglehilight.title,Toggle Highlight,1,Basculer vers l'élément principal,1
 details.item.open,Expand,1,Développer,1
 details.item.collapse,Collapse,1,Réduire,1
