--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -12,8 +12,8 @@ keyboardInstructions.app,"Use 'Tab' to navigate between sections of the applicat
 keyboardInstructions.lists,"Use the arrow keys to move between items in lists. With a list item selected you can press 'Space' or 'Enter' to click the item. You can also navigate within the list item using 'Tab'.",1,"Lorsqu'un élément de la liste est sélectionné, vous pouvez appuyer sur « Espace » ou « Entrée » pour cliquer sur l'élément. Vous pouvez également vous déplacer au sein de l'élément de la liste au moyen de la touche « Tab ».",1
 keyboardInstructions.map,"When the map is selected, use the arrow keys to move around and 'Enter' to select a point.",1,"Lorsque la carte est sélectionnée, utilisez le pavé curseur pour vous déplacer et appuyez sur « Entrée »  pour sélectionner un point.",1
 keyboardInstructions.OK,OK,1,OK,1
-map.toggleScaleToMetric,Switch to metric map scale,1,Passer à l'échelle métrique de la carte,0
-map.toggleScaleToImperial,Switch to imperial map scale,1,Passer à l'échelle impériale de la carte,0
+map.toggleScaleToMetric,Switch to metric map scale,1,Passer à l'échelle métrique,1
+map.toggleScaleToImperial,Switch to imperial map scale,1,Passer à l'échelle impériale,1
 map.coordinates.east,E,1,E,1
 map.coordinates.west,W,1,O,1
 map.coordinates.north,N,1,N,1
@@ -31,7 +31,7 @@ notifications.controls.dismiss,Dismiss,1,Rejeter,1
 notifications.controls.expand,Expand,1,Développer,1
 notifications.controls.collapse,Collapse,1,Réduire,1
 notifications.controls.clearAll,Clear All,1,Effacer tout,1
-panels.access,Press enter or space to access the panel,1,Appuyez sur Entrée ou Espace pour accéder au panneau,0
+panels.access,Press enter or space to access the panel,1,Appuyez sur Entrée ou sur la barre d'espacement pour accéder au panneau,1
 panels.controls.close,Close,1,Fermer,1
 panels.controls.pin,Pin,1,Épingler,1
 panels.controls.unpin,Unpin,1,Désépingler,1
@@ -48,7 +48,7 @@ panels.alert.minimize,{name} panel minimized,1,Fenêtre {name} réduite,1
 layer.error,{id} failed to load,1,Échec du chargement de {id},1
 layer.longload,{id} is taking longer than expected to load,1,Le chargement de {id} met plus de temps que prévu,1
 layer.longdraw,{id} is taking longer than expected to draw,1,{id} prend plus de temps que prévu à extraire,1
-layer.mismatch,{name} cannot be displayed in the current projection,1,{name} ne peut pas être affiché dans la projection actuelle,0
-layer.filtersdisabled,Filters have been disabled for {name},1,Les filtres ont été désactivés par {name},0
-layer.filterwarning,You are attempting to use a grid that contains unmodifiable layers. Filtering will be partially disabled,1,Vous tentez d'utiliser une grille contenant des calques non modifiables. Le filtrage sera partiellement désactivé,0
+layer.mismatch,{name} cannot be displayed in the current projection,1,{id} ne peut pas s'afficher dans la projection actuelle,1
+layer.filtersdisabled,Filters have been disabled for {name},1,Les filtres ont été désactivés pour {name},1
+layer.filterwarning,You are attempting to use a grid that contains unmodifiable layers. Filtering will be partially disabled.,1,Vous essayez d'utiliser une grille qui contient des couches non modifiables. Le filtrage sera partiellement désactivé.,1
 layer.noexportmap,{name} was attempted to be added as a Map Image Layer but Map Export is not enabled for the service,1,La tentative d’ajouter {name} comme couche d’imagerie cartographique a échouée car elle n’a pu être activé pour ce service,1
